# novus-voice

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: kokoro.rs  main.rs  pack.rs  protocol.rs
